styles.css
h1 {
    padding-left: 20%;
    text-align: center;
    /* background-color:lightblue; */
}

/* Responsive iFrame */
 
.responsive-iframe-container {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px;
    height: 0;
    overflow: hidden;
}
 
.responsive-iframe-container iframe,   
.vresponsive-iframe-container object,  
.vresponsive-iframe-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

#navbar {
    position: fixed;
    top: 0px;
    width: 100%;
}

